Plenty of improvements: - Exceptions handling with ControllerAdvise - Rollback record on entities to Java classes with lombok - Implemented custom exceptions and use it on PriceService - Implemented PriceController - Add UT for PriceController and PriceService - Added Integration test PriceHandlerServiceIntegration.java with requested Test. - Improve README.md - Added docker-compose.yml