@@ -13,6 +13,8 @@
     <java.version>17</java.version>
     <springboot.version>3.3.4</springboot.version>
     <h2.version>2.3.232</h2.version>
+    <lombok.version>1.18.34</lombok.version>
+    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
   </properties>
 
 
@@ -28,10 +30,22 @@
     <version>${springboot.version}</version>
   </dependency>
   <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-test</artifactId>
+    <version>${springboot.version}</version>
+    <scope>test</scope>
+  </dependency>
+  <dependency>
     <groupId>com.h2database</groupId>
     <artifactId>h2</artifactId>
     <version>${h2.version}</version>
     <scope>runtime</scope>
+  </dependency>
+  <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>${lombok.version}</version>
+    <scope>provided</scope>
   </dependency>
  </dependencies>
 
@@ -45,9 +59,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
         <configuration>
           <source>17</source>
           <target>17</target>
+          <compilerArgs>
+            <arg>-parameters</arg>
+            --enable-preview
+          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
